kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        command: ['sh', '-c']
        args:
        - sed -i 's/80/8000/g' /etc/nginx/conf.d/default.conf
          && sed -i 's/\/usr\/share\/nginx\/html/\/homework/g' /etc/nginx/conf.d/default.conf
          && nginx -g 'daemon off;'
        ports:
        - containerPort: 8000
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -rf /homework/index.html"]
        volumeMounts:
        - name: homework-volume
          mountPath: /homework
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: homework-volume
        emptyDir: {}
      nodeSelector:
        homework: "true"
